# sergas-agents

./: .backend_copilotkit.pid  .claudeignore  .env.claude-code  .env.claude-code.example  .env.example  .env.local.example  .env.real  .env.test  .frontend_copilotkit.pid  .gitignore  .pre-commit-config.yaml  AGENT_CHAT_GUIDE.md  COMPREHENSIVE_MONITORING_IMPLEMENTATION_SUMMARY.md  COPILOTKIT_GRAPHQL_INTEGRATION_COMPLETE.md  EXECUTION_STATUS.md  HOW_TO_TEST.md  LITELLM-GLM46-INTEGRATION-GUIDE.md  MONITORING_SUMMARY.md  ORCHESTRATOR_TRANSFORMATION_TEST_SUMMARY.md  README.md  REAL_TIME_IMPLEMENTATION_SUMMARY.md  RESILIENCE_FILES_MANIFEST.md  SERVICE_ORCHESTRATION_COMPLETE.md  TESTING_GUIDE.md  TEST_INTEGRATION.md  USAGE_GUIDE.md  WEEK13_FILES.txt  WEEK13_SUMMARY.md  Zoho_CRM_Python_SDK_v2.md  alembic.ini  backend.log.old  chat_with_backend.py  claude_agent_sdk_guide.md  claude_skills.md  dependency_free_test.py  dependency_free_test_report.json  final_integration_test.py  final_integration_test_report.json  fix_claude_auth.sh  frontend.log.old  (+22 more)
.next/: trace
data/: sergas_agent.db-shm
docs/: AUTHENTICATION_GUIDE.md  CLAUDE_CODE_FIX.md  CLAUDE_SDK_MAX_SUBSCRIPTION_GUIDE.md  COGNEE_GLM_SETUP.md  COGNEE_QUICK_DECISION.md  COGNEE_ZAI_SUCCESS_SUMMARY.md  COMPREHENSIVE_MONITORING_GUIDE.md  COPILOTKIT_BACKEND_INTEGRATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEVOPS_COMPLETION_REPORT.md  DEVOPS_FILES_REFERENCE.md  DEVOPS_INFRASTRUCTURE_COMPLETE.md  DOCUMENTATION_COMPLETE.md  DYNAMIC_WORKFLOW_ENGINE_GUIDE.md  ENHANCED_GLM_INTEGRATION_GUIDE.md  FILE_SEPARATION_STRATEGY.md  GLM46_CONFIGURATION_COMPLETE.md  GLM_QUICK_SETUP_TEMPLATE.md  MASTER_SPARC_PLAN.md  MASTER_SPARC_PLAN_V2.md  MASTER_SPARC_PLAN_V3.md  MONITORING_GUIDE.md  MONITORING_INFRASTRUCTURE.md  ORCHESTRATOR_TRANSFORMATION_PHASE1.md  PROJECT_COMPLETION_REPORT.md  PROXY_SOLUTIONS_FOR_COGNEE.md  PYTHON_DOWNGRADE_SUCCESS_REPORT.md  PYTHON_VERSION_ASSESSMENT.md  QUICK_AUTH_REFERENCE.md  REAL_TIME_FEATURES_DOCUMENTATION.md  RELEASE_NOTES_TEMPLATE.md  SETUP_COMPLETE_GUIDE.md  SETUP_INSTRUCTIONS.md  SPARC_PLAN_SUMMARY.md  SYSTEM_OVERVIEW.md  USE_GLM_WITH_CLAUDE_CODE.md  WEEK10_COMPLETION_SUMMARY.md  WEEK10_FILES_MANIFEST.md  WEEK10_QUICK_START.md  WEEK11_MONITORING_COMPLETION.md  (+35 more)
examples/: cli_demo.sh  enhanced_glm_example.py  monitoring_demo.py  monitoring_integration_example.py  resilience_example.py  workflow_engine_examples.py
frontend/: COMPREHENSIVE_TEST_REPORT.md  README.md  README_TESTING.md  coverage.config.js  (+17 more)
(+608 files in other folders)
