[tool.poetry]
name = "sergas-super-account-manager"
version = "0.1.0"
description = "Multi-agent Claude SDK system for automating Zoho CRM account management"
authors = ["Sergas Team <team@sergas.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
claude-agent-sdk = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Zoho Integration
zohocrmsdk8-0 = "^2.0.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
httpx = "^0.25.0"

# Cognee Memory
cognee = "^0.3.0"
lancedb = "^0.3.0"

# Database
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
redis = "^5.0.1"

# Security
authlib = "^1.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.29.7"

# API Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

# Monitoring
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"

# Task Queue
celery = "^5.3.4"

# Utilities
python-dotenv = "^1.0.0"
click = "^8.1.7"
tenacity = "^8.2.3"
python-dateutil = "^2.8.2"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pylint = "^3.0.2"
mypy = "^1.7.1"
black = "^23.11.0"
isort = "^5.12.0"
bandit = "^1.7.5"
ipython = "^8.17.2"
pre-commit = "^3.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0111", "C0103"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
